# mcp_hub

./: .gitignore  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  DOCKER_SETUP.md  ENCRYPTED_KEYS_GUIDE.md  ENCRYPTED_KEYS_SUMMARY.md  GOOGLE_API_SETUP.md  MULTI_DATABASE_GUIDE.md  OPENAI_SETUP.md  PRODUCTION_READY.md  PROJECT_RENAME.md  PROJECT_SEPARATION_COMPLETE.md  README.md  SECURITY.md  TOOL_INTEGRATION_GUIDE.md  add-database.sh  add_mcp_servers.py  app.py  app_demo.py  discover_tools.py  docker-compose.yml  docker_secure_setup.py  encrypted_keys_setup.py  env.example  list_tools.py  llm_providers.py  production_checklist.md  requirements.txt  run.sh  run_demo.sh  secure_key_manager.py  setup-databases.sh  setup-docker.sh  setup.py  setup_llm_providers.py  sqlite_mcp_server.py  test_encrypted_keys.py
config/: development.yaml  multi_llm.yaml  production.template
deployment/docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: PROJECT_OVERVIEW.md  README.md  STRUCTURE.md
init-scripts/: 01-init-database.sql
mcp-hub-core/: Dockerfile  README.md  env.example  main.py  requirements.txt
mcp-hub-ui/: Dockerfile  README.md  env.example  package-lock.json  package.json  playwright.config.js  playwright.config.simple.js  simple-test.js  test-runner.js
mcp_hub/: __init__.py
spring-boot-crud-generator/: README.md
tests/: __init__.py  conftest.py
utility/spring-boot-crud-generator/: README.md  pyproject.toml
utility/spring-boot-crud-generator/src/spring_boot_crud_generator/: __init__.py  generator.py
utility/spring-boot-crud-generator/tests/: test_generator.py
(+67 files in other folders)
