[project]
name = "spring-boot-crud-generator"
version = "0.1.0"
description = "Generate Spring Boot CRUD scaffolding from table definitions"
authors = [{ name = "MCP Hub" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
